# doudou

./: .gitignore  LICENSE  konwledge.md  readme.md
doudou/: Cargo.toml  config.json  lines.txt
doudou/src/: core.rs  main.rs
doudou/src/app/: app.rs
doudou/src/core/: route.rs
doudou/src/core/route/: handler.rs
doudou/src/core/route/handler/: form.rs
doudou/static/: index.html
doudou/static/bak/: index.html
doudou/static/bak/css/: index.css
doudou/static/css/: index.css
doudou/tests/: example.rs
