[package]
name = "doudou"
version = "0.1.0"
authors = ["abel <raojianli66@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "2"
actix-rt = "1"
actix-files="0.2.1"
serde = { version = "1.0", features = ["derive"] }
# mongodb
mongodb = "0.9.2"
bson = "0.14.0"
# json
rustc-serialize = "0.3.18"